--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Vincent Reynaud",
   "license": "MIT",
   "bin": {
-    "resource-gen": "./index.js"
+    "resource-gen": "./cli.js"
   },
   "dependencies": {
     "file-system": "^2.2.2",
