--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "resource-markdown-generator",
   "version": "1.0.0",
   "description": "Utility to parse webloc & browser-printed pdf files of folder system into a comprehensive list of links in markdown",
-  "main": "index.js",
+  "main": "cli.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node cli.js",
     "test": "node tests.js"
   },
   "keywords": [
@@ -24,5 +24,8 @@
     "markdown-magic": "^0.1.25",
     "path": "^0.12.7",
     "pdf-parse": "^1.1.1"
+  },
+  "devDependencies": {
+    "jsdoc-to-markdown": "^4.0.1"
   }
 }
