debug issue with calling scripts with npm

--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "keywords": [
     "markdown",
     "file-system",
+    "bookmark",
     "resource",
-    "web-links",
+    "web-link",
+    "url",
+    "parse",
+    "link",
     "generator"
   ],
   "repository": {
@@ -17,8 +21,8 @@
   "license": "MIT",
   "main": "cli.js",
   "scripts": {
-    "start": "node cli.js",
-    "test": "node tests.js"
+    "test": "node tests.js",
+    "gen": "node cli.js"
   },
   "bin": {
     "resource-gen": "./cli.js"
