--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "main": "cli.js",
   "scripts": {
     "gen": "node cli.js",
-    "test": "node cli.js '/Users/vincentreynaud/Dropbox/Development DCI/tools-and-resources' dev-tools-and-resources -l -i _snippets liked -t 'Useful Web Development Links'",
+    "test": "node cli.js '/Users/vincentreynaud/Dropbox/Development DCI/tools-and-resources' dev-tools-and-resources -l -i _snippets liked gatsby -t 'Useful Web Development Links'",
+    "test-ca": "node cli.js '/Users/vincentreynaud/Desktop/FILES/WORK/1 Production/1 COLLECTIVE ANXIETY/2 Research/3 The Future?' test-ca -l",
     "pre-publish": "npm run lint && npm run test && npm run gen --"
   },
   "bin": {
